==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Added support for conditionals with ``NULL`` arguments.

 - Fixed an issue that caused wrong results to be returned for global
   aggregation on ``JOINS`` when literal expression in ``WHERE`` clause is
   evaluated to false. E.g.::

     SELECT COUNT(*) FROM t1, t2 WHERE 1=2

 - Provide comprehensive error message when using  ``NULL`` literal in
    ``GROUP BY``.

 - Allow ``DISTINCT`` to operate on literals. E.g.::

     SELECT DISTINCT ['val1', 'val2'], col1, col2, ... FROM t

 - Allow ``GROUP BY`` on any literal. E.g.::

      SELECT {a=1, b=2}, COUNT(*) FROM t GROUP BY 1

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed an issue that could cause the ``_score >= <minScore>`` filter to not
   work correctly if used in a query with an ``ORDER BY`` clause.