@@ -616,6 +616,13 @@ all rows where race['interests'] has at least one element that does not equal
     +----------------+-----------------------------------------+
     SELECT 2 rows in set (... sec)
 
+.. NOTE::
+
+    When using the negated operator ``!= ANY`` by default the maximum size of
+    the array to operate on is ``8192``. To be able to use larger arrays the
+    :ref:`indices.query.bool.max_clause_count <conf-indices-query-bool.max_clause_count>`
+    setting must be changed appropriately on each node.
+
 Negating the ``=`` query from above is totally different. It can be translated
 to *get all rows where race['interests'] has no value that equals 'netball'*::
 
@@ -634,6 +641,13 @@ for operators
  - ``LIKE`` and ``NOT LIKE``
 
  - all other comparison operators (excluding ``IS NULL`` and ``IS NOT NULL``)
+
+.. NOTE::
+
+    When using the operators ``LIKE ANY`` and ``NOT LIKE ANY`` by default the
+    maximum size of the array to operate on is ``8192``. To be able to use
+    larger arrays the :ref:`indices.query.bool.max_clause_count <conf-indices-query-bool.max_clause_count>`
+    setting must be changed appropriately on each node.
 
 Limits
 ------
