@@ -21,6 +21,11 @@ Changes
 Fixes
 =====
 
+ - ``!= ANY()`` could not operate on arrays with more than 1024 elements. This
+   limit has been increased by default to 8192. A new node setting:
+   ``indices.query.bool.max_clause_count`` has been exposed to allow to
+    configure this limit.
+
  - Added support for conditionals with ``NULL`` arguments.
 
  - Fixed an issue that caused wrong results to be returned for global
